Adding the "add to dataset" function to the rucio test script

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # VScode
 *.code-workspace
 
+
+# Rucio test downloads
+user.*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
